# libsita

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gen_makefile.sh  gen_vs2019.bat  gen_xcode.sh  install_vcpkg_packages.bat  install_vcpkg_packages.sh
doc/: coding conventions.md
doc/sita_core/: Readme.md
doc/sita_net/: Readme.md
doc/sita_render/: Readme.md
src/: .gitignore  CMakeLists.txt  Makefile  gen_makefile.sh  gen_vs2019.bat  gen_xcode.sh  install_ubunta_packages.sh  install_vcpkg_packages.bat  install_vcpkg_packages.sh
src/core/: CMakeLists.txt
src/core/src/: EASTL.natvis  sita_core.h
src/core/src/sita_core/base/: BinDeserializer.h  BinSerializer.h  ByteOrder.h  Error.cpp  Error.h  UnitTest.cpp  UnitTest.h  sita_base.h  sita_macro.h
src/core/src/sita_core/detect_platform/: sita_detect_compiler_gcc.h
src/core/src/sita_core/log/: Log.cpp  Log.h
src/core/src/sita_core/net/: Poll.h  SockAddr.cpp  SockAddr.h  Socket.cpp  Socket.h
src/core/src/sita_core/string/: Fmt.h  String.cpp  String.h
src/core/src/site_core/: site_core-pch.h
src/core/src/site_core/base/: Error.h  UnitTest.h  sita_base.h
src/core/src/site_core/detect_platform/: sita_detect_compiler_vc.h  sita_detect_platform.h
src/core/src/site_core/log/: Log.cpp  Log.h
src/core/src/site_core/net/: SockAddr.cpp  SockAddr.h
src/core/src/site_core/string/: String.h
src/core/test/: CMakeLists.txt
src/core/test/src/: main.cpp
src/core/test/src/base/: test_BinSerializer.cpp
src/core/test/src/net/: test_Socket.cpp
src/core/test/src/string/: test_Fmt.cpp
src/imgui/: CMakeLists.txt
src/imgui/src/: sita_imgui.h
src/imgui/src/sita_imgui/: ImGuiApp.cpp  ImGuiApp.h  ImGuiHelper.h  sita_imgui-pch.h
src/net/client/: CMakeLists.txt
src/net/common/: CMakeLists.txt
src/net/common/src/: sita_net_common.h
src/net/common/src/sita_net_common/: sita_net_common-config.h  sita_net_common-pch.h
src/net/common/src/sita_net_common/engine/: NEPacket.cpp  NEPacket.h  NESocket.cpp  NESocket.h  NetEngine.cpp  NetEngine.h
src/net/examples/sita_net_example_001/: CMakeLists.txt
src/net/examples/sita_net_example_001/src/: GameApp.cpp  GameApp.h  main.cpp  sita_net_example_001-pch.h
src/net/examples/sita_net_example_002/: CMakeLists.txt
src/net/examples/sita_net_example_002/src/: GameApp.cpp  GameApp.h  Player.cpp  Player.h  main.cpp  my_imgui_helper.h  pch.h  sita_net_example_002-pch.h
src/net/examples/sita_net_example_003/: CMakeLists.txt
src/net/examples/sita_net_example_003/src/: main.cpp  sita_net_example_003-main.cpp  sita_net_example_003-pch.h
src/net/server/base/: CMakeLists.txt
src/net/server/controller/: CMakeLists.txt
src/net/server/frontend/: CMakeLists.txt
src/net/server/gateway/: CMakeLists.txt
src/net/server/login/: CMakeLists.txt
src/net/server/zone/: CMakeLists.txt
src/render/: CMakeLists.txt
